--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ reqwest = { version = "0.12.9", features = ["json"] }
 serde = "1.0.216"
 serde_json = "1.0.134"
 toml = "0.8.19"
+actix-cors = "0.7.0"
